<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:paddingTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleMarginStart="72dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:menu="@menu/main_top_app_bar"
                app:navigationIcon="@drawable/ic_account_circle_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/greeting_user_mainactivity"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user_full_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-64dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alignmentMode="alignMargins"
            android:columnCount="4"
            android:columnOrderPreserved="true"
            android:padding="8dp"
            android:rowCount="2">

            <TextView
                android:id="@+id/btn_create_event"
                style="@style/TextButtonMenu"
                app:drawableTopCompat="@drawable/ic_add_event"
                android:text="@string/buat_event" />

            <TextView
                style="@style/TextButtonMenu"
                app:drawableTopCompat="@drawable/ic_task"
                android:text="@string/event_saya" />

            <TextView
                style="@style/TextButtonMenu"
                app:drawableTopCompat="@drawable/ic_person"
                android:text="@string/daftar_karyawan" />

            <TextView
                style="@style/TextButtonMenu"
                app:drawableTopCompat="@drawable/ic_reservasi_meeting"
                android:text="@string/reservasi_meeting" />

            <TextView
                style="@style/TextButtonMenu"
                android:layout_marginTop="16dp"
                app:drawableTopCompat="@drawable/ic_cuti"
                android:text="@string/pengajuan_cuti" />

            <TextView
                style="@style/TextButtonMenu"
                android:paddingTop="16dp"
                app:drawableTopCompat="@drawable/ic_absence"
                android:text="@string/absensi" />
        </GridLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_no_events"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Event belum tersedia.\nSilakan Buat Event"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/events_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/orange_500"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_upcoming_event"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/contentdesc_upcoming_event_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/txt_month_upcoming_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/orange_500"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_upcoming_event"
                    tools:text="JUL" />

                <TextView
                    android:id="@+id/txt_date_upcoming_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_month_upcoming_event"
                    app:layout_constraintStart_toStartOf="@+id/txt_month_upcoming_event"
                    app:layout_constraintTop_toBottomOf="@+id/txt_month_upcoming_event"
                    tools:text="13" />

                <TextView
                    android:id="@+id/txt_name_upcoming_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/txt_month_upcoming_event"
                    app:layout_constraintTop_toTopOf="@+id/txt_month_upcoming_event"
                    tools:text="Android Training Day" />

                <TextView
                    android:id="@+id/txt_location_upcoming_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/txt_name_upcoming_event"
                    app:layout_constraintTop_toTopOf="@+id/txt_date_upcoming_event"
                    tools:text="Conference Room - Elevania F30" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/lbl_new_event_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_event_terbaru"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_button_lihat_semua"
            android:textColor="@color/orange_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_event_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_new_event_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>